--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.14.0",
     "@tailwindcss/forms": "^0.5.1",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.1"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
@@ -24,6 +26,7 @@
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.10",
+    "prisma": "^3.14.0",
     "tailwindcss": "^3.0.24",
     "typescript": "4.6.4"
   }
