--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@prisma/client": "^3.14.0",
+    "@sendgrid/mail": "^7.6.2",
     "@tailwindcss/forms": "^0.5.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-hook-form": "^7.31.1"
+    "react-hook-form": "^7.31.1",
+    "twilio": "^3.77.0"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
