--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.1",
+    "swr": "^1.3.0",
     "twilio": "^3.77.0"
   },
   "devDependencies": {
