--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.1",
     "swr": "^1.3.0",
+    "ts-node": "^10.8.0",
     "twilio": "^3.77.0"
   },
   "devDependencies": {
@@ -33,5 +34,8 @@
     "prisma": "^3.14.0",
     "tailwindcss": "^3.0.24",
     "typescript": "4.6.4"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
