--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@sendgrid/mail": "^7.6.2",
     "@tailwindcss/forms": "^0.5.1",
     "iron-session": "^6.1.3",
-    "next": "12.1.6",
+    "next": "^12.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.1",
